src/test/ui/default-ty-param-fallback/feature_gate.stderr
error[E0282]: type annotations needed
  --> $DIR/feature_gate.rs:17:5
   |
17 |     Opt::Non;
   |     ^^^^^^^^ cannot infer type for `T`

error: aborting due to previous error

